--- a/WebApplication4/Views/Home/Contact.cshtml
+++ b/WebApplication4/Views/Home/Contact.cshtml
@@ -2,16 +2,78 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<hr />
+
+
+
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Universoty of South Carolina Upstate<br />
+    800 University Way<br />
+    Spartanburg , SC 29303<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Darrel Scott:</strong>   <a href="mailto:descott@email.uscupstate.edu">descott@email.uscupstate.edu</a><br />
+    <strong>Stefan Sternberg:</strong> <a href="mailto:stefans@email.uscupstate.edu">stefans@email.uscupstate.edu </a><br />
+    <strong>Tavis Hicks:</strong> <a href="mailto:tthicks@email.uscupstate.edu ">tthicks@email.uscupstate.edu</a><br />
+    <strong>Marah Rykard:</strong> <a href="mailto:rykardm@email.uscupstate.edu">rykardm@email.uscupstate.edu </a>
 </address>
+
+
+<div class="row">
+    <div class="col-md-6 col-md-offset-3" id="form_container">
+        <h2>Contact Us</h2>
+        <p>
+            Please send your message below. We will get back to you at the earliest!
+        </p>
+        <form role="form" method="post" id="reused_form">
+
+            <div class="row">
+                <div class="col-sm-12 form-group">
+                    <label for="message">
+                        Message:
+                    </label>
+                    <div class="msgBox">
+                        <textarea class="form-control" type="textarea" name="message" id="message" maxlength="6000" rows="7"></textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 form-group">
+                    <label for="name">
+                        Your Name:
+                    </label>
+                    <input type="text" class="form-control" id="name" name="name" required>
+                </div>
+                <div class="col-sm-6 form-group">
+                    <label for="email">
+                        Email:
+                    </label>
+                    <input type="email" class="form-control" id="email" name="email" required>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-sm-12 form-group">
+                    <div class="sendbut">
+                        <button type="submit" class="btn btn-lg btn-default pull-right">Send →</button>
+                    </div>
+                </div>
+            </div>
+
+        </form>
+        <div id="success_message" style="width:100%; height:100%; display:none; ">
+            <h3>Posted your message successfully!</h3>
+        </div>
+        <div id="error_message"
+             style="width:100%; height:100%; display:none; ">
+            <h3>Error</h3>
+            Sorry there was an error sending your form.
+
+        </div>
+    </div>
+</div>
