Created a surveys page

--- a/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/Views/Shared/_Layout.cshtml
@@ -22,13 +22,16 @@
                     <li>
                         @Html.ActionLink("Home", "Index", "Home")
                     </li>
+
+
+
+                    <li>
+                        @Html.ActionLink("Find a Survey", "Index", "Surveys")
+                    </li> 
                     @*
-        <li>
-            @Html.ActionLink("SurveyQuestions", "Index", "SurveyQuestions")
-        </li>
-        <li>
-            @Html.ActionLink("SurveyResponses", "Index", "SurveyResponses")
-        </li>
+                    <li>
+                        @Html.ActionLink("SurveyQuestions", "Index", "SurveyQuestions")
+                    </li>
                     *@
                 </ul>
             @Html.Partial("_LoginPartial")
