--- a/WebApplication4/Views/Home/FAQ.cshtml
+++ b/WebApplication4/Views/Home/FAQ.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "FAQ";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <hr />
 <div class="FAQ">
 
@@ -57,7 +57,7 @@
                 <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-                            Where to the results go?
+                            Where do the results go?
                         </a>
                     </h4>
                 </div>
