--- a/WebApplication4/Views/Manage/AddPhoneNumber.cshtml
+++ b/WebApplication4/Views/Manage/AddPhoneNumber.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewBag.Title = "Phone Number";
 }
+@{
+    Layout = "_LayoutLogin.cshtml";
+}
 
 <h2>@ViewBag.Title.</h2>
 
@@ -12,7 +15,7 @@
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(m => m.Number, new { @class = "col-md-2 control-label" })
+        <div class="pwinfo"><h4>Phone Number</h4></div>
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Number, new { @class = "form-control" })
         </div>
