--- a/WebApplication4/Views/Shared/_Layoutgiver.cshtml
+++ b/WebApplication4/Views/Shared/_Layoutgiver.cshtml
@@ -3,56 +3,80 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body>
-    <div class="header">
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    @Html.ActionLink("Survey Says", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    </ul>
-                    @Html.Partial("_LoginPartial")
-                </div>
-            </div>
+
+    <!--Header-->
+    <div class='header'>
+        <img src='\Content\img\logo.png'>
+    </div>
+
+    <!--Menu-->
+    <div class='menu'>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+
+                <li>
+                    @Html.ActionLink("Make a Survey", "Index", "Surveys")
+                </li>
+                @*
+                    <li>
+                        @Html.ActionLink("SurveyQuestions", "Index", "SurveyQuestions")
+                    </li>
+                *@
+            </ul>
+            @Html.Partial("_LoginPartial")
         </div>
     </div>
+
+
+    @*<div class="header">
+            <div class="navbar navbar-default">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        @Html.ActionLink("Survey Says", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("About", "About", "Home")</li>
+                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        </ul>
+                        @Html.Partial("_LoginPartial")
+                    </div>
+                </div>
+            </div>
+        </div>*@
+
     <div class="container body-content">
+
         @RenderBody()
         <hr />
     </div>
     <div class="footer">
         <footer>
-            <p>&copy; @DateTime.Now.Year - Survey Says</p>
 
-                    
-                    <div class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav">
-                            <div class="footerlinks">
-                                <li>@Html.ActionLink("About", "About", "Home")</li>
-                                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                            </div>
-                        </ul>
+            <div class="footerlinks">
+                <p>
+                    @Html.ActionLink("About", "AboutGiver", "Home")  |  @Html.ActionLink("Contact", "ContactGiver", "Home")
+                    |  @Html.ActionLink("FAQ", "FAQGiver", "Home")  |  @Html.ActionLink("Privacy Policy", "PrivacyPolicyGiver", "Home")
+                </p>
 
-                   
-                
+
+                <p>&copy; @DateTime.Now.Year - Survey Says</p>
             </div>
-            @*<p>&copy; @DateTime.Now.Year - Survey Says</p>*@
-        </footer>
+    </div>
+    @*<p>&copy; @DateTime.Now.Year - Survey Says</p>*@
+    </footer>
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
