--- a/WebApplication4/Views/Account/Login.cshtml
+++ b/WebApplication4/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
     <div class="row">
 
         <div class="col-md-12">
-            Contac
+            
             <section id="loginForm">
                 @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
@@ -69,7 +69,7 @@
                     <p>
                         @Html.ActionLink("Register as survey taker", "Register")
                     </p>
-                    <p>@Html.ActionLink("Register as survey giver", "Register")</p>
+                    <p>@Html.ActionLink("Register as survey giver", "RegisterGiver")</p>
                     <p>&copy; @DateTime.Now.Year - Survey Says</p>
                     @* Enable this once you have account confirmation enabled for password reset functionality
                         <p>
