--- a/WebApplication4/Views/Account/RegisterGiver.cshtml
+++ b/WebApplication4/Views/Account/RegisterGiver.cshtml
@@ -6,9 +6,9 @@
     Layout = "_LayoutLogin.cshtml";
 }
 
-<h2>Taker Register</h2>
+<h2>Register As A Survey Giver</h2>
 <div class="registerf">
-    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    @using (Html.BeginForm("RegisterGiver", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
     {
         @Html.AntiForgeryToken()
         <h4>Create a new account.</h4>
@@ -57,7 +57,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <div class="registerbut">
-                    <input type="submit" class="btn btn-default" value="Register" />
+                    <input type="submit" class="btn btn-default" value="RegisterGiver" />
                 </div>
             </div>
         </div>
