--- a/WebApplication4/Views/Home/ContactGiver.cshtml
+++ b/WebApplication4/Views/Home/ContactGiver.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
+@{
+    Layout = "_Layoutgiver.cshtml";
+}
 
 <div class="row">
     <div class="col-md-6 col-md-offset-3" id="form_container">
