Current Issues: -Invalid login when I try to log into created accounts? -Having trouble linking to register page for givers to the proper account manage page for only the giver layout.
Changes
-Added taker and giver to navbar layout inside of taker account
-change pw page now looks good
-add phone now looks good
-added 2 more about dropdowns to fill the page
-commented out my registergiver area in acountController incase it was breaking something (doesnt appear to be but I dont know what is up with this invalid login attempts)

--- a/WebApplication4/Views/Home/About.cshtml
+++ b/WebApplication4/Views/Home/About.cshtml
@@ -23,6 +23,7 @@
             </div>
         </div>
 
+
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -53,6 +54,36 @@
                 </div>
             </div>
         </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                        What is Survey Says?
+                    </a>
+                </h4>
+            </div>
+            <div id="collapse3" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <p>Survey Says is a survey website</p>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                        More history on us
+                    </a>
+                </h4>
+            </div>
+            <div id="collapse3" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <p>Insert text here</p>
+                </div>
+            </div>
+        </div>
+
+
 
     </div>
 </div>
