--- a/WebApplication4/Content/Site.css
+++ b/WebApplication4/Content/Site.css
@@ -216,7 +216,10 @@ textarea {
 
 /*change pw page*/
 .pwinfo {
-    padding-left: 45px;
+    padding-left: 5px;
     padding-top: 1px;
     padding-bottom: 1px;
+}
+.cpwbut {
+    padding-right:60px;
 }
