--- a/WebApplication4/Views/Manage/ChangePassword.cshtml
+++ b/WebApplication4/Views/Manage/ChangePassword.cshtml
@@ -18,26 +18,34 @@
         <div class="form-group">
             <div class="pwinfo"><h4>Old Password</h4></div>
             <div class="col-md-10">
-                @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                <div class="enterboxes">
+                    @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                    </div>
+                </div>
             </div>
-        </div>
         <div class="form-group">
             <div class="pwinfo"><h4>New Password</h4></div>
             <div class="col-md-10">
-                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                <div class="enterboxes">
+                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                    </div>
+                </div>
             </div>
-        </div>
         <div class="form-group">
             <div class="pwinfo"><h4>Confirm Password</h4></div>
             <div class="col-md-10">
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                <div class="enterboxes">
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                    </div>
+                </div>
             </div>
-        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Change password" class="btn btn-default" />
+                <div class="cpwbut">
+                    <input type="submit" value="Change password" class="btn btn-default" />
+                </div>
+                </div>
             </div>
-        </div>
     }
 </div>
 @section Scripts {
