--- a/WebApplication4/Views/Account/Register.cshtml
+++ b/WebApplication4/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
     Layout = "_LayoutLogin.cshtml";
 }
 
-<h2>Taker Register</h2>
+<h2>Survey Taker Register</h2>
 <div class="registerf">
     @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
     {
