Account display username/email in progress
other issures:
-invalid logins
-Register giver needs to link to Manage/IndexGiver upon successful registering
-create a survye needs questions
-take a survey take buttons need to allow you to take the survey

--- a/WebApplication4/Views/Manage/IndexGiver.cshtml
+++ b/WebApplication4/Views/Manage/IndexGiver.cshtml
@@ -16,7 +16,7 @@
 
         <dt>UserName:</dt>
         <dd>
-
+            @Html.ActionLink();
         </dd>
         <dt>Email:</dt>
         <dd>
