Register issue fixed. Current issues -invalid logins -minor giver layout changes -display info on manage account pages -take survey needs working -questions for survey giver

--- a/WebApplication4/Views/Manage/IndexGiver.cshtml
+++ b/WebApplication4/Views/Manage/IndexGiver.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication4.Models.IndexViewModel
+﻿@model WebApplication4.Models.IndexGiverViewModel
 @{
     ViewBag.Title = "Manage";
 }
@@ -16,7 +16,7 @@
 
         <dt>UserName:</dt>
         <dd>
-            @Html.ActionLink();
+           
         </dd>
         <dt>Email:</dt>
         <dd>
