-Layouts for taker is all correct now -Login/regester/pw/phone/registergiver -layouts for giver are all correct now

--- a/WebApplication4/Views/Manage/Index.cshtml
+++ b/WebApplication4/Views/Manage/Index.cshtml
@@ -14,7 +14,7 @@
 
         <dt>User Name:</dt>
         <dd>
-            @Html.DisplayText(User.Identity.GetUserName())
+            @Html.Display(User.Identity.GetUserName())
         </dd>
         <dt>Email:</dt>
         <dd>
