--- a/WebApplication4/Views/Home/_Layoutgiver.cshtml
+++ b/WebApplication4/Views/Home/_Layoutgiver.cshtml
@@ -12,36 +12,32 @@
 
     <!--Header-->
     <div class='header'>
-        <img src='\Content\img\logo.png' height="420" width="42">
+       
+        <img src='\Content\img\logo.png' height="42" width="42">
     </div>
 
     <!--Menu-->
     <div class='menu'>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-
-                    <li>
-                        @Html.ActionLink("Find a Survey", "Index", "SurveysTaker")
-                    </li>
-                    @*<li>
-            @Html.ActionLink("Surveys", "Index", "Surveys")
-        </li>
-        <li>
-            @Html.ActionLink("Create a Survey", "Create", "SurveyGiver")
-        </li>
-                    *@
-                    @*
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li>
+                    @Html.ActionLink("View Created Surveys", "Index", "Surveys")
+                </li>
+                <li>
+                    @Html.ActionLink("Create a Survey", "Create", "SurveyGiver")
+                </li>
+                @*
         <li>
             @Html.ActionLink("SurveyQuestions", "Index", "SurveyQuestions")
         </li>
-                    *@
-                </ul>
-            @Html.Partial("_LoginPartial")
-            </div>
+                *@
+            </ul>
+            @Html.Partial("_LoginPartialGiver")
         </div>
+    </div>
 
 
-        @*<div class="header">
+    @*<div class="header">
             <div class="navbar navbar-default">
                 <div class="container">
                     <div class="navbar-header">
@@ -64,26 +60,26 @@
             </div>
         </div>*@
 
-        <div class="container body-content">
+    <div class="container body-content">
 
-            @RenderBody()
-            <hr />
-        </div>
-        <div class="footer">
-            <footer>
+        @RenderBody()
+        <hr />
+    </div>
+    <div class="footer">
+        <footer>
 
-                <div class="footerlinks">
-                    <p>
-                        @Html.ActionLink("About", "About", "Home")  |  @Html.ActionLink("Contact", "Contact", "Home")
-                        |  @Html.ActionLink("FAQ", "FAQ", "Home")  |  @Html.ActionLink("Privacy Policy", "PrivacyPolicy", "Home")
-                    </p>
+            <div class="footerlinks">
+                <p>
+                    @Html.ActionLink("About", "AboutGiver", "Home")  |  @Html.ActionLink("Contact", "ContactGiver", "Home")
+                    |  @Html.ActionLink("FAQ", "FAQGiver", "Home")  |  @Html.ActionLink("Privacy Policy", "PrivacyPolicyGiver", "Home")
+                </p>
 
 
-                    <p>&copy; @DateTime.Now.Year - Survey Says</p>
-                </div>
-        </div>
-        @*<p>&copy; @DateTime.Now.Year - Survey Says</p>*@
-        </footer>
+                <p>&copy; @DateTime.Now.Year - Survey Says</p>
+            </div>
+    </div>
+    @*<p>&copy; @DateTime.Now.Year - Survey Says</p>*@
+    </footer>
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
