--- a/WebApplication4/Views/Surveys/Create.cshtml
+++ b/WebApplication4/Views/Surveys/Create.cshtml
@@ -3,14 +3,17 @@
 @{
     ViewBag.Title = "Create";
 }
+@{
+    Layout = "_Layoutgiver.cshtml";
+}
 
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Survey</h4>
         <hr />
