--- a/WebApplication4/Views/Surveys/Delete.cshtml
+++ b/WebApplication4/Views/Surveys/Delete.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewBag.Title = "Delete";
 }
+@{
+    Layout = "_Layoutgiver.cshtml";
+}
 
 <h2>Delete</h2>
 
@@ -53,7 +56,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
