--- a/WebApplication4/Views/Surveys/Edit.cshtml
+++ b/WebApplication4/Views/Surveys/Edit.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewBag.Title = "Edit";
 }
+@{
+    Layout = "_Layoutgiver.cshtml";
+}
 
 <h2>Edit</h2>
 
@@ -10,7 +13,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Survey</h4>
         <hr />
