--- a/WebApplication4/Views/Surveys/Index.cshtml
+++ b/WebApplication4/Views/Surveys/Index.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewBag.Title = "Index";
 }
+@{
+    Layout = "_Layoutgiver.cshtml";
+}
 
 <h2>Index</h2>
 
@@ -29,29 +32,30 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateCreated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TakerLimit)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateLimit)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AspNetUser.Email)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.SurveyID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.SurveyID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.SurveyID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DateCreated)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TakerLimit)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DateLimit)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AspNetUser.Email)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.SurveyID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.SurveyID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.SurveyID })
+            </td>
+        </tr>
+    }
 
 </table>
