Fixed the bug from my last commit. Instead of creating a variable named user we just use the User class instead.

--- a/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 <ul class="nav navbar-nav">
 
                     <li>
-                        @Html.ActionLink("Find a Survey", "Index", "SurveysTaker")
+                        @Html.ActionLink("Find a Survey", "Index", "SurveyTaker")
                     </li>
                     @*<li>
             @Html.ActionLink("Surveys", "Index", "Surveys")
