Fixed some layout changes Fixed broken bootstrap questions in the about and aboutgiver page

--- a/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 
     <!--Header-->
     <div class='header'>
-        <img src='\Content\img\logo.png' height="420" width="42">
+        <img src='\Content\img\logo.png'>
     </div>
 
     <!--Menu-->
