Displays username now as link in manage account taker + pull latest updates

--- a/WebApplication4/Views/Manage/Index.cshtml
+++ b/WebApplication4/Views/Manage/Index.cshtml
@@ -14,7 +14,7 @@
 
         <dt>User Name:</dt>
         <dd>
-            @Html.Display(User.Identity.GetUserName())
+            @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </dd>
         <dt>Email:</dt>
         <dd>
