--- a/WebApplication4/Views/SurveyQuestions/Create.cshtml
+++ b/WebApplication4/Views/SurveyQuestions/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
+    var SurveyIDs = ViewBag.SurveyID;
 }
 
 <h2>Create</h2>
@@ -18,7 +19,13 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SurveyID, "SurveyID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("SurveyID", null, htmlAttributes: new { @class = "form-control" })
+                
+                <select class="form-control" id="SurveyID" name="SurveyID">
+                    @foreach (WebApplication4.Models.Survey s in SurveyIDs.Items)
+                    {
+                        <option value="@s.SurveyID">@s.Name</option>
+                    }
+                </select>
                 @Html.ValidationMessageFor(model => model.SurveyID, "", new { @class = "text-danger" })
             </div>
         </div>
